add doi.org prefix to DOI in pub list

--- a/ejs/article.ejs
+++ b/ejs/article.ejs
@@ -11,7 +11,7 @@
       Details
     </a>
     <% if (item.doi) { %>
-    <a href="<%- item.doi %>" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+    <a href="https://doi.org/<%- item.doi %>" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
       DOI
     </a>
     <% } %>
