--- a/ejs/publications.ejs
+++ b/ejs/publications.ejs
@@ -1,10 +1,12 @@
+<!-- https://quarto.org/docs/websites/website-listings-custom.html#sorting-filtering-and-pagination -->
 ```{=html}
-<ul>
+<ul class="list">
 <% for (const item of items) { %>
-  <li>
-    <%= item.year %> <strong><i> <%= item.journal %><br/> </i></strong>
-    <%= item.authors %><br/>
-    <a href="<%- item.url4title %>"><%= item.title %></a><br/>
+  <li <%= metadataAttrs(item) %>>
+    <span class="listing-year"> <%= item.year %> <span>
+    <span class="listing-journal"> <strong><i> <%= item.journal %><br/> </i></strong> <span>
+    <span class="listing-authors"><%= item['authors'] %><span>
+    <a href="<%- item.url4title %>" class="listing-title"><%= item.title %></a><br/>
   </li>
 <% } %>
 </ul>
