extra awesome links and more

--- a/ejs/awesome.ejs
+++ b/ejs/awesome.ejs
@@ -4,9 +4,9 @@
   <li <%= metadataAttrs(item) %>>
     <a href="<%- item.url %>" class="listing-title"><%= item.title %></a>
     <p>
-      <strong><span class="listing-author"><%= item.author %><span> </strong> | <span class="listing-date"><%= item.date %><span> 
+      <strong><span class="listing-author"><%= item.proposer %></span> </strong> | <span class="listing-date"><%= item.date %></span>
       <br/>
-      <span class="listing-description"> <%= item.description %> <span><br/>
+      <span class="listing-description"> <%= item.description %> </span><br/>
     </p>
   </li>
 <% } %>
